--- a/ai-ticket-assistant/package.json
+++ b/ai-ticket-assistant/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "inngest-dev": "npx inngest-cli@latest dev"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "@inngest/agent-kit": "^0.9.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "inngest": "^3.40.1",
     "jsonwebtoken": "^9.0.2",
